--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 									a short line about yourself.
 								-->
 								<p>
-									PhD Student <br> University of Idaho
+									Computer Science PhD Student <br> University of Idaho
 								</p>
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
