--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
 <head>
 	<!-- This is the title of the page. It is the text that appears inside this pages tab in your web browser -->
-	<title>elidandar</title>
+	<title><img src="images/profile.jpg">elidandar</title>
+	<link rel="icon" type="image/x-icon" href="images/profile.jpg"/>
+
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<!-- 	This links to this page's CSS, which is contained in the folder assets/css and the file main.css.
@@ -20,6 +22,7 @@
 			 If you have a new CSS file you'd like to add with custom styling, you should link to it here using:
 			 <link rel="stylesheet" href="assets/css/my-new-css-file.css"/> 
 		-->
+	<meta name="keywords" content="PHD, Computer Science, Elijah Danquah Darko"/> 
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<!-- 	In the case that the user's browser does not support JavaScript (unlikely, but possible), the page
 			will load a separate set of CSS stylings from the file assets/css/noscript.css
@@ -52,7 +55,7 @@
 
 									Try adding "border-radius: 50%;" to the style attribute.
 								-->
-					<img src="images/profile.jpg" style="width:280px; height:280px; object-fit: cover;">
+					<img src="images/profile.jpg" style="width:300px; height:280px; object-fit: cover;">
 
 					<!-- 	Here is a paragraph where you can put your position and institution, or
 									a short line about yourself.
@@ -159,10 +162,11 @@
 
 			<!-- Here is a the "Contact" card. -->
 			<article id="contact">
-				<h2 class="major">Contact</h2>
+				<h2 class="major">Contact</h2>				
 				<p>
 					<b>Email: elidandar@gmail.com</b>
 				</p>
+				
 				<!--
 							<p> 
 								<b>Address:</b> 
@@ -174,30 +178,37 @@
 								here: https://fontawesome.com/icons
 							-->
 				<ul class="icons">
+					<!-- The Email icon -->
+					<li>
+						<a href="mailto:elidandar@gmail.com" class="icon fa-envelope" target="_blank">
+							<span class="label">Email</span>
+						</a>
+					</li>
+
 					<!-- The Twitter icon -->
 					<li>
 						<!-- 	Note that you need to change the link to point to your page.
 										Replace "#" with your Twitter profile page.
 									-->
-						<a href="#" class="icon fa-twitter">
+						<a href="#" class="icon fa-twitter" target="_blank">
 							<span class="label">Twitter</span>
 						</a>
 					</li>
-					<!-- The Facebook icon -->
+					<!-- The LinkedIn icon -->
 					<li>
-						<a href="#" class="icon fa-facebook">
-							<span class="label">Facebook</span>
+						<a href="#" class="icon fa-linkedin" target="_blank">
+							<span class="label">LinkedIn</span>
 						</a>
 					</li>
 					<!-- The Instagram icon -->
 					<li>
-						<a href="#" class="icon fa-instagram">
+						<a href="#" class="icon fa-instagram" target="_blank">
 							<span class="label">Instagram</span>
 						</a>
 					</li>
 					<!-- The GitHub icon -->
 					<li>
-						<a href="#" class="icon fa-github">
+						<a href="#" class="icon fa-github" target="_blank">
 							<span class="label">GitHub</span>
 						</a>
 					</li>
@@ -206,11 +217,7 @@
 
 									We found "envelope" here: https://fontawesome.com/icons/envelope
 								-->
-					<!-- <li>
-									<a href="#" class="icon fa-envelope">
-										<span class="label">Email</span>
-									</a>
-								</li> -->
+
 				</ul>
 			</article>
 		</div>
