--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <head>
 	<!-- This is the title of the page. It is the text that appears inside this pages tab in your web browser -->
 	<title><img src="images/profile.jpg">elidandar</title>
-	<link rel="icon" type="image/x-icon" href="images/profile.jpg"/>
+	<link rel="icon" type="image/x-icon" href="images/profile.png"/>
 
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
