--- a/index.html
+++ b/index.html
@@ -185,21 +185,23 @@
 						</a>
 					</li>
 
+					<!-- The LinkedIn icon -->
+					<li>
+						<a href="https://www.linkedin.com/in/elijah-danquah-darko-a383a018b" class="icon fa-linkedin" target="_blank">
+							<span class="label">LinkedIn</span>
+						</a>
+					</li>
+
 					<!-- The Twitter icon -->
 					<li>
 						<!-- 	Note that you need to change the link to point to your page.
 										Replace "#" with your Twitter profile page.
 									-->
-						<a href="#" class="icon fa-twitter" target="_blank">
+						<a href="#" class="icon fa-twitter">
 							<span class="label">Twitter</span>
 						</a>
 					</li>
-					<!-- The LinkedIn icon -->
-					<li>
-						<a href="#" class="icon fa-linkedin" target="_blank">
-							<span class="label">LinkedIn</span>
-						</a>
-					</li>
+
 					<!-- The Instagram icon -->
 					<li>
 						<a href="#" class="icon fa-instagram" target="_blank">
