--- a/index.html
+++ b/index.html
@@ -134,12 +134,17 @@
 					<!-- 	A <br> tag puts in a break so that the text that follows it displays on
 									the next line.
 								-->
-					<b>Project I Title</b><br>Project description, including further links to posters, talks,
+					<b>Project I Title</b><br>
+					Coming soon 
+					<!-- 	Project description, including further links to posters, talks,
 					publications.
+								-->
 				</p>
 				<p>
-					<b>Project II Title</b><br>Project description, including further links to posters, talks,
-					publications.
+					<b>Project II Title</b><br>
+					Coming soon <!-- 	Project description, including further links to posters, talks,
+						publications.
+									-->
 				</p>
 			</article>
 
@@ -155,9 +160,9 @@
 				<p>
 					<b>Outreach:</b>
 				</p>
-				<p>
+				<!--<p>
 					<b>Equity & Inclusion:</b>
-				</p>
+				</p> -->
 			</article>
 
 			<!-- Here is a the "Contact" card. -->
