--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
 
 <head>
 	<!-- This is the title of the page. It is the text that appears inside this pages tab in your web browser -->
-	<title><img src="images/profile.jpg">elidandar</title>
-	<link rel="icon" type="image/x-icon" href="images/profile.png"/>
+	<title>
+		elidandar
+	</title>
+	<!-- add icon link -->
+	<link rel = "icon" href ="images/profile.jpg" type = "image/x-icon">
 
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -156,9 +159,11 @@
 				</span>
 				<p>
 					<b>Teaching:</b>
+					Coming soon 
 				</p>
 				<p>
 					<b>Outreach:</b>
+					Coming soon 
 				</p>
 				<!--<p>
 					<b>Equity & Inclusion:</b>
