--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
 				<!-- Here are three paragraphs where you can fill out information about yourself -->
 				<p>
 					<!-- Items contained in <b> tags are bolded! -->
-					<b>Education:</b>
+					<b>Education: BSc. Statistics, MSc. Mathematical Science, MSc. Statistical Science</b>
 				</p>
 				<p>
-					<b>Research Interests:</b>
+					<b>Research Interests: AI, Machine Learning, Bioinformatics</b>
 				</p>
 				<p>
-					<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/">Include ADS link!</a>
+					<b>Publications:</b> <a href="#">Coming soon</a>
 				</p>
 			</article>
 
