--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 					<b>Education: BSc. Statistics, MSc. Mathematical Science, MSc. Statistical Science</b>
 				</p>
 				<p>
-					<b>Research Interests: AI, Machine Learning, Bioinformatics</b>
+					<b>Research Interests: AI, Machine Learning, Data Science, Bioinformatics</b>
 				</p>
 				<p>
 					<b>Publications:</b> <a href="#">Coming soon</a>
@@ -220,7 +220,7 @@
 					</li>
 					<!-- The GitHub icon -->
 					<li>
-						<a href="#" class="icon fa-github" target="_blank">
+						<a href="https://github.com/elidandar" class="icon fa-github" target="_blank">
 							<span class="label">GitHub</span>
 						</a>
 					</li>
