--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 									a short line about yourself.
 								-->
 					<p>
-						Computer Science PhD Student <br> University of Idaho (MIDA LAB)
+						Computer Science PhD Student <br> University of Idaho, Machine Intelligence and Data Analytics (MIDA) Lab
 					</p>
 					<!-- Here is a paragraph where you can put a link to your CV -->
 					<p>
