--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
 					<!-- The Instagram icon -->
 					<li>
-						<a href="#" class="icon fa-instagram" target="_blank">
+						<a href="https://instagram.com/love_elidandar?igshid=OGQ5ZDc2ODk2ZA==" class="icon fa-instagram" target="_blank">
 							<span class="label">Instagram</span>
 						</a>
 					</li>
