--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		elidandar
 	</title>
 	<!-- add icon link -->
-	<link rel = "icon" href ="images/profile.jpg" type = "image/x-icon">
+	<link rel = "icon" href ="images/prof.jpg" type = "image/x-icon">
 
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
